k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-api

  template:
    metadata:
      labels:
        app: backend-api

    spec:
      containers:
      - name: backend-api
        image: backend-api
        imagePullPolicy: Never
        
        resources:
          requests:
             memory: "32Mi"
             cpu: "100m"
          limits:
             memory: "50Mi"
             cpu: "200m"

        ports:
        - containerPort: 3000 

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
