k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: blue 
    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
      - name: frontend
        image: 051987441306.dkr.ecr.ap-south-1.amazonaws.com/frontend:44
        imagePullPolicy: Always
        ports:
        - containerPort: 80
