k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          
          volumeMounts:
            - name: redis-storage
              mountPath: /data

      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
