k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-api-service
  namespace: ecommerce
    
spec:
  type: NodePort

  selector:
    app: backend-api

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30081
