k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ecommerce
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
