k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-api-service

spec:
  type: NodePort

  selector:
    app: backend-api-broken

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30081
