k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

  # Strip /api prefix before forwarding request to backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: backend-api-service
                port:
                  number: 3000

          - path: /(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: nginx-service
                port:
                  number: 80
